# FastAPI.Hexagonal-Auth-template

./: Dockerfile  README.md  pyproject.toml
deploy/: .env  docker-compose.yml
src/: config.py  main.py
src/application/use_cases/auth/: check_is_open_reg_use_case.py  check_roles_use_case.py  get_access_token.py  get_current_user_use_case.py  invalidate_token_use_case.py  login_use_case.py  open_close_register_use_case.py  register_user_use_case.py  validate_invite_token_use_case.py
src/application/use_cases/users/: delete_user.py  get_roles.py  get_user_roles.py  get_users.py  set_roles.py
src/domain/: entities.py  enums.py  exceptions.py
src/infrastructure/: interfaces.py  models.py
src/infrastructure/forms/: register_form.py
src/infrastructure/logger/: logger.py
src/infrastructure/managers/: password_manager.py  role_manager.py
src/infrastructure/migrations/versions/: 2025_12_20_2342-8a05d7004f3e_init.py  2025_12_22_1409-b1d9c58e2c6e_added_user_and_roles.py  2025_12_22_1436-af29fd36901c_added_settings.py  2025_12_22_1438-e1e58db5bd29_fill_db.py
src/infrastructure/repositories/: base.py  interfaces.py  role_repository.py  settings_repository.py  user_repository.py  user_role_repository.py
src/infrastructure/services/: jwt_token_service.py
src/infrastructure/uow/: impl.py  interfaces.py
src/presentation/: exceptions_mapper.py  pagination.py  schemas.py
src/presentation/dependencies/: auth_dependencies.py  users_dependencies.py
src/presentation/routers/: auth_router.py  users_router.py
